Restore IllegalReflectiveAccess workaround